Preparation to integrate the new range cache with the binary search over files module

--- a/jenax-io-parent/pom.xml
+++ b/jenax-io-parent/pom.xml
@@ -14,6 +14,7 @@
 	</parent>
 
 	<modules>
+		<module>jenax-io-json</module>
 		<module>jenax-io-core</module>
 		<module>jenax-io-kryo</module>
 	</modules>
