--- a/jenax-io-parent/jenax-io-core/pom.xml
+++ b/jenax-io-parent/jenax-io-core/pom.xml
@@ -41,6 +41,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-io-kryo</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
 		</dependency>
@@ -50,6 +55,10 @@
 			<artifactId>jcl-over-slf4j</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-io-kryo</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
