--- a/jenax-resources-parent/jenax-resources-test-config/src/main/resources/log4j2.properties
+++ b/jenax-resources-parent/jenax-resources-test-config/src/main/resources/log4j2.properties
@@ -7,7 +7,7 @@ appender.console.target = SYSTEM_ERR
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d [%t] %-5p %c: %m%n
 
-rootLogger.level = info
+rootLogger.level = trace
 rootLogger.appenderRef.stderr.ref = STDERR
 
 logger.jena-shared.name = org.apache.jena.shared
@@ -16,3 +16,6 @@ logger.jena-shared.level = warn
 logger.apache-http.name = org.apache.http
 logger.apache-http.level = warn
 
+
+logger.aksw-commons-io.name = org.aksw.jena_sparql_api.io.binseach.bz2
+logger.aksw-commons-io.level = info
