Refactored package name of jenax-server

--- a/jenax-models-parent/pom.xml
+++ b/jenax-models-parent/pom.xml
@@ -17,6 +17,7 @@
 		<module>jenax-models-prov</module>
 		<module>jenax-models-dcat-api</module>
 		<module>jenax-models-entityinfo</module>
+		<module>jenax-models-csvw</module>
 	</modules>
 </project>
 
