Fixed version issue with gson; minor cleanups

--- a/jenax-arq-parent/jenax-arq-pathfinding/pom.xml
+++ b/jenax-arq-parent/jenax-arq-pathfinding/pom.xml
@@ -25,6 +25,13 @@
 			<artifactId>jena-jgrapht-bindings</artifactId>
 		</dependency>
 
+
+		<!-- Override guava version drawn in by jgrapht-bindings -->
+                <dependency>
+                	<groupId>com.google.guava</groupId>
+                        <artifactId>guava</artifactId>
+                </dependency>
+
 		<!-- Override the arq version from the jgrapht-bindings -->
 		<dependency>
 			<groupId>org.apache.jena</groupId>
