--- a/jenax-arq-parent/jenax-arq-datashapes/pom.xml
+++ b/jenax-arq-parent/jenax-arq-datashapes/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>gson-utils-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
+
 		<!-- <dependency> -->
 		<!-- <groupId>org.aksw.jenax</groupId> -->
 		<!-- <artifactId>jenax-arq-analytics-core</artifactId> -->
