--- a/jenax-arq-parent/jenax-arq-datashapes/pom.xml
+++ b/jenax-arq-parent/jenax-arq-datashapes/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-arq-parent</artifactId>
-		<version>4.4.0-2-SNAPSHOT</version>
+		<version>4.4.0-2</version>
 	</parent>
 
 	<dependencies>
