--- a/jenax-resources-parent/jenax-resources-servicedescription/pom.xml
+++ b/jenax-resources-parent/jenax-resources-servicedescription/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.aksw.jenax</groupId>
         <artifactId>jenax-resources-parent</artifactId>
-        <version>4.4.0-2-SNAPSHOT</version>
+        <version>4.4.0-2</version>
     </parent>
 
     <dependencies>
