--- a/jenax-jgrapht-parent/jenax-jgrapht-subgraphisoindex/pom.xml
+++ b/jenax-jgrapht-parent/jenax-jgrapht-subgraphisoindex/pom.xml
@@ -27,6 +27,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-utils</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
