Cleaned up naming of conjure dataref classes Conjure executor can now resolve data against named graphs of a given dataset

--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>jenax-arq-plugins-datatypes</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-models-dcat-api</artifactId>
+		</dependency>
+
 		<!-- Used for cutsom Aggregators (should probably go to jsa utls) -->
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
