Added lehmer-code computation to query utils (needs to be moved to final place)

--- a/pom.xml
+++ b/pom.xml
@@ -1487,6 +1487,12 @@
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-java7</artifactId>
 				<version>${tika.version}</version>
+                                <exclusions>
+                                        <exclusion>
+                                                <groupId>xerces</groupId>
+                                                <artifactId>xercesImpl</artifactId>
+                                        </exclusion>
+                                </exclusions>
 			</dependency>
 
 
