--- a/jenax-models-parent/pom.xml
+++ b/jenax-models-parent/pom.xml
@@ -14,6 +14,7 @@
 	</parent>
 
 	<modules>
+		<module>jenax-models-foaf</module>
 		<module>jenax-models-prov</module>
 		<module>jenax-models-dcat-api</module>
 		<module>jenax-models-entityinfo</module>
