--- a/jenax-server-parent/jenax-server-core/pom.xml
+++ b/jenax-server-parent/jenax-server-core/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-server-parent</artifactId>
-		<version>4.6.0-SNAPSHOT</version>
+		<version>4.6.0-1-SNAPSHOT</version>
 	</parent>
 
 
