--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.aksw.jenax</groupId>
+	<parent>
+		<groupId>org.aksw.jenax</groupId>
+		<artifactId>jenax-bom</artifactId>
+		<version>4.5.0-1-SNAPSHOT</version>
+		<relativePath>jenax-bom</relativePath>
+	</parent>
+
+	<!-- <groupId>org.aksw.jenax</groupId> -->
 	<artifactId>jenax-parent</artifactId>
 
 	<packaging>pom</packaging>
@@ -12,8 +19,8 @@
 	<name>Jena eXtension Components</name>
 	<description>Modular extensions for Apache Jena</description>
 	<url>https://github.com/Scaseco/jenax</url>
+
 	<modules>
-		<module>jenax-bom</module>
 		<module>jenax-resources-parent</module>
 		<module>jenax-annotations-parent</module>
 		<module>jenax-jgrapht-parent</module>
