Added union function / aggregate function for geometries (untested)

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -101,6 +101,12 @@
 			<!-- </dependency> -->
 
 			<dependency>
+                                <groupId>org.aksw.jenax</groupId>
+                                <artifactId>jenax-arq-views</artifactId>
+                                <version>${project.version}</version>
+                        </dependency>
+
+			<dependency>
 				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-plugins-datatypes</artifactId>
 				<version>${project.version}</version>
