dbscan workflow now functional; array:unnest no longer requires a list in object position

--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -20,6 +20,12 @@
 			<artifactId>google-maps-services</artifactId>
 		</dependency>
 
+		<!-- dbscan -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+		</dependency>
+
 		<!-- Override version of tika -->
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
