--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -559,7 +559,7 @@
 
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-slf4j18-impl</artifactId>
+				<artifactId>log4j-slf4j-impl</artifactId>
 				<version>${log4j.version}</version>
 			</dependency>
 
@@ -1152,10 +1152,12 @@
 						<groupId>com.sun.jersey</groupId>
 						<artifactId>jersey-server</artifactId>
 					</exclusion>
+					<!--
 					<exclusion>
                                                 <groupId>ch.qos.reload4j</groupId>
                                                 <artifactId>reload4j</artifactId>
-                                        </exclusion>
+					</exclusion>
+					-->
 
 					<exclusion>
 					        <groupId>org.slf4j</groupId>
