--- a/jenax-resources-parent/jenax-resources-test-config/pom.xml
+++ b/jenax-resources-parent/jenax-resources-test-config/pom.xml
@@ -16,7 +16,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j18-impl</artifactId>
+			<artifactId>log4j-slf4j-impl</artifactId>
 		</dependency>
 	</dependencies>
 </project>
