Fixed test case (geof:union presently under spatial-f:union - intended?) Migrated content type probing to new AsyncParser

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -1281,7 +1281,12 @@
                                         <exclusion>
                                                 <groupId>xerces</groupId>
                                                 <artifactId>xercesImpl</artifactId>
-                                        </exclusion>
+					</exclusion>
+					<exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+
                                 </exclusions>
 			</dependency>
 
