Added from-as-filter to the plugin bundle

--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>jenax-arq-plugins-service-vfs</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-fromasfilter/artifactId>
+		</dependency>
+
 		<!-- Used for binary search via the service clause -->
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
