Finally moved binary search modules to aksw-commons

--- a/jenax-io-parent/jenax-io-core/pom.xml
+++ b/jenax-io-parent/jenax-io-core/pom.xml
@@ -62,6 +62,11 @@
 
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-io-hadoop</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
 			<artifactId>aksw-commons-io-process-pipes</artifactId>
 		</dependency>
 	
