Fixed build due to missing javax.annotation-api (wasn't a problem before so something must have changed)

--- a/jenax-facete-parent/jenax-facete-impl/pom.xml
+++ b/jenax-facete-parent/jenax-facete-impl/pom.xml
@@ -24,6 +24,10 @@
 			<artifactId>jenax-reprogen-core</artifactId>
 		</dependency>
 
+                        <dependency>
+                                <groupId>javax.annotation</groupId>
+				<artifactId>javax.annotation-api</artifactId>
+                        </dependency>
 
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
