--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -57,6 +57,8 @@
 
 		<gson.version>2.9.0</gson.version>
 
+		<annotation-api.version>1.3.2</annotation-api.version>
+
 		<!-- <atmosphere.version>2.0.0.RC3</atmosphere.version> -->
 		<!-- <atmosphere-spring.version>1.1.0.RC5</atmosphere-spring.version> -->
 		<!-- <jetty-plugin.version>8.1.10.v20130312</jetty-plugin.version> -->
@@ -764,6 +766,12 @@
 			</dependency>
 
 
+			<dependency>
+				<groupId>javax.annotation</groupId>
+				<artifactId>javax.annotation-api</artifactId>
+				<version>${annotation-api.version}</version>
+			</dependency>
+
 			<!-- For some reason atmosphere is not finding this class -->
 			<dependency>
 				<groupId>xml-apis</groupId>
@@ -1327,13 +1335,6 @@
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
-			</dependency>
-
-
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-math3</artifactId>
-				<version>3.6.1</version>
 			</dependency>
 
 			<dependency>
