from-enhancer now supports alias expressions

--- a/jenax-arq-parent/jenax-arq-fromasfilter/pom.xml
+++ b/jenax-arq-parent/jenax-arq-fromasfilter/pom.xml
@@ -20,6 +20,15 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-reprogen-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-plugins-datatypes</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-tdb2</artifactId>
 <!-- 			<version>${project.version}</version> -->
