--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,8 +10,8 @@ kramdown:
 # exclude:
 #  - linkedgeodata*
 
-include:
-  - docs
+#include:
+#  - docs
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
