Fixed build (apparently regression in init of jena 4.7.0 - ARQ.getContext() may return null)

--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>aksw-commons-collectors</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-utils-gson</artifactId>
+		</dependency>
+
 		<!-- Used for ResultSet comparison -->
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
