Added custom sameas inferencing plugin

--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -95,6 +95,11 @@
 			<artifactId>jenax-arq-fromasfilter</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-sameas</artifactId>
+		</dependency>
+
 		<!-- Used for binary search via the service clause -->
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
