--- a/jenax-arq-parent/pom.xml
+++ b/jenax-arq-parent/pom.xml
@@ -39,6 +39,7 @@
 		<module>jenax-arq-entityquery</module>
 		<module>jenax-arq-views</module>
 		<module>jenax-arq-fromasfilter</module>
+		<module>jenax-arq-sameas</module>
 
 		<!-- udf relies on reprogen; and reprogen relies on arq utils; structure is not ideal -->
 		<!-- maybe its better to have udf build on the top level functionbinder module -->
