--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -185,6 +185,12 @@
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-arq-sameas</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-plugins-bundle</artifactId>
 				<version>${project.version}</version>
 			</dependency>
