--- a/jenax-arq-parent/jenax-arq-utils/pom.xml
+++ b/jenax-arq-parent/jenax-arq-utils/pom.xml
@@ -26,6 +26,10 @@
 			<artifactId>aksw-commons-utils</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-tuples</artifactId>
+		</dependency>
 
 		<!-- Used for the Generator interface which improves over VarAlloc -->
 		<dependency>
