report more errors from ScriptProcessor

--- a/jenax-arq-parent/jenax-arq-rx/pom.xml
+++ b/jenax-arq-parent/jenax-arq-rx/pom.xml
@@ -91,6 +91,10 @@
 			<artifactId>rxjava</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.codepoetics</groupId>
+			<artifactId>protonpack</artifactId>
+		</dependency>
 
 		<!-- Unit Testing -->
 		<dependency>
