Fix for csvw dialect plugin registration. Some revision of the recently added utils (stream-to-iterator, element-to-graph).

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -515,6 +515,12 @@
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-models-csvw</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-facete-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
