js: namespace prefix now be default points to http://jena.apache.org/ARQ/jsFunction#

--- a/jenax-arq-parent/pom.xml
+++ b/jenax-arq-parent/pom.xml
@@ -52,5 +52,6 @@
 
 		<module>jenax-arq-datasets-parent</module>
 		<module>jenax-arq-plugins-parent</module>
+		<module>jenax-arq-picocli</module>
 	</modules>
 </project>
