--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-bundle/pom.xml
@@ -14,6 +14,16 @@
 	</parent>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-models-csvw</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-models-csvw-univocity</artifactId>
+		</dependency>
+
 		<!-- Google polyline encoder/decoder for sparql extension functions -->
 		<dependency>
 			<groupId>com.google.maps</groupId>
