--- a/jenax-arq-parent/jenax-arq-constraints/pom.xml
+++ b/jenax-arq-parent/jenax-arq-constraints/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>aksw-commons-utils</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-algebra-allen-interval</artifactId>
+		</dependency>
+
 		<!-- For PolaritySet -->
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
