Factored out module jenax-io-kryo-jena which only contains registrations for plain jena registrations (no extensions)

--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -264,6 +264,12 @@
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-io-kryo-jena</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-models-entityinfo</artifactId>
 				<version>${project.version}</version>
 			</dependency>
