--- a/jenax-io-parent/pom.xml
+++ b/jenax-io-parent/pom.xml
@@ -16,6 +16,7 @@
 	<modules>
 		<module>jenax-io-json</module>
 		<module>jenax-io-core</module>
+		<module>jenax-io-kryo-jena</module>
 		<module>jenax-io-kryo</module>
 	</modules>
 </project>
