--- a/jenax-rx-parent/jenax-rx-ops-syscall/pom.xml
+++ b/jenax-rx-parent/jenax-rx-ops-syscall/pom.xml
@@ -41,6 +41,12 @@
 		</dependency>
 
 		<dependency>
+                        <groupId>org.aksw.jenax</groupId>
+                        <artifactId>jenax-io-json</artifactId>
+                </dependency>
+
+
+		<dependency>
 			<groupId>org.aksw.commons</groupId>
 			<artifactId>aksw-commons-io-syscalls</artifactId>
 		</dependency>
