load some sparql-generate extension functions

--- a/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
@@ -17,6 +17,7 @@
 		<module>jenax-arq-plugins-bundle</module>
 		<module>jenax-arq-plugins-service-vfs</module>
 		<module>jenax-arq-plugins-datatypes</module>
+		<module>jenax-arq-plugins-generate</module>
 	</modules>
 
 	<profiles>
