--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -180,6 +180,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-arq-plugins-generate</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-rdfnode-in-dataset</artifactId>
 				<version>${project.version}</version>
 			</dependency>
