--- a/jenax-io-parent/jenax-io-json/pom.xml
+++ b/jenax-io-parent/jenax-io-json/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-io-parent</artifactId>
-		<version>4.8.0-1-SNAPSHOT</version>
+		<version>4.8.0-1</version>
 	</parent>
 
 	<dependencies>
