--- a/jenax-rx-parent/jenax-rx-dataaccess/pom.xml
+++ b/jenax-rx-parent/jenax-rx-dataaccess/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-rx-parent</artifactId>
-		<version>4.8.0-1-SNAPSHOT</version>
+		<version>4.8.0-1</version>
 	</parent>
 
 	<dependencies>
