--- a/jenax-arq-parent/jenax-arq-algebra/pom.xml
+++ b/jenax-arq-parent/jenax-arq-algebra/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-arq-parent</artifactId>
-		<version>4.8.0-1</version>
+		<version>4.8.0-2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-constraints</artifactId>
-			<version>4.8.0-1</version>
+			<version>4.8.0-2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
