--- a/jenax-models-parent/jenax-models-dcat-api/pom.xml
+++ b/jenax-models-parent/jenax-models-dcat-api/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.aksw.jenax</groupId>
         <artifactId>jenax-models-parent</artifactId>
-        <version>4.8.0-1</version>
+        <version>4.8.0-2-SNAPSHOT</version>
     </parent>
 
     <dependencies>
