--- a/jenax-server-parent/jenax-server-frontends/pom.xml
+++ b/jenax-server-parent/jenax-server-frontends/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.aksw.jenax</groupId>
         <artifactId>jenax-server-parent</artifactId>
-        <version>4.8.0-1</version>
+        <version>4.8.0-2-SNAPSHOT</version>
     </parent>
 
 
