--- a/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-generate/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/jenax-arq-plugins-generate/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-arq-plugins-parent</artifactId>
-		<version>4.8.0-2-SNAPSHOT</version>
+		<version>4.8.0-1</version>
 	</parent>
 
 	<dependencies>
@@ -18,6 +18,12 @@
 	    <groupId>fr.mines-stetienne.ci.sparql-generate</groupId>
 	    <artifactId>sparql-generate-jena</artifactId>
 	    <version>2.0.12</version>
+	    <exclusions>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+	      </exclusion>
+            </exclusions>
 	  </dependency>
 	</dependencies>
 </project>
