--- a/jenax-arq-parent/jenax-arq-pathfinding/pom.xml
+++ b/jenax-arq-parent/jenax-arq-pathfinding/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-arq-parent</artifactId>
-		<version>4.8.0-2-SNAPSHOT</version>
+		<version>4.8.0-2</version>
 	</parent>
 	<dependencies>
 		<!-- Self Dependencies -->
