--- a/jenax-facete-parent/jenax-facete-api/pom.xml
+++ b/jenax-facete-parent/jenax-facete-api/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-facete-parent</artifactId>
-		<version>4.8.0-2-SNAPSHOT</version>
+		<version>4.8.0-2</version>
 	</parent>
 
 	<dependencies>
