--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-bom</artifactId>
-		<version>4.8.0-2-SNAPSHOT</version>
+		<version>4.8.0-2</version>
 		<relativePath>jenax-bom</relativePath>
 	</parent>
 
