--- a/jenax-arq-parent/jenax-arq-rdfnode-in-dataset/pom.xml
+++ b/jenax-arq-parent/jenax-arq-rdfnode-in-dataset/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-arq-parent</artifactId>
-		<version>4.8.0-2</version>
+		<version>4.8.0-3-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
