--- a/jenax-bom/pom.xml
+++ b/jenax-bom/pom.xml
@@ -7,7 +7,7 @@
 		<version>4.5.0-1-SNAPSHOT</version> </parent> <artifactId>jenax-bom</artifactId> -->
 	<groupId>org.aksw.jenax</groupId>
 	<artifactId>jenax-bom</artifactId>
-	<version>4.8.0-2</version>
+	<version>4.8.0-3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>Jena eXtension Components</name>
