--- a/jenax-io-parent/jenax-io-kryo-jena/pom.xml
+++ b/jenax-io-parent/jenax-io-kryo-jena/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-io-parent</artifactId>
-		<version>4.8.0-2</version>
+		<version>4.8.0-3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jenax-io-kryo-jena</artifactId>
