--- a/jenax-resources-parent/jenax-resources-prefixes/pom.xml
+++ b/jenax-resources-parent/jenax-resources-prefixes/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-resources-parent</artifactId>
-		<version>4.8.0-2</version>
+		<version>4.8.0-3-SNAPSHOT</version>
 	</parent>
 
 	<build>
